--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/hoangduongngocthao/WebApp_Group4#readme",
   "dependencies": {
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "hbs": "^4.2.0",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.6",
